# bb8_ros

bb8/bb_8_description/: CMakeLists.txt  package.xml
bb8/bb_8_description/meshes/bb8-body/: bb8-body.dae
bb8/bb_8_description/meshes/bb8-head/: bb8-head.dae
bb8/bb_8_description/urdf/: bb_8.gazebo.xacro  bb_8.urdf.xacro
bb8/bb_8_gazebo/: CMakeLists.txt  package.xml
bb8/bb_8_gazebo/launch/: empty_world.launch  main_empty.launch  spawn_bb8.launch
bb8/bb_8_gazebo/launch/include/: bb_8.launch.xml
bb8/bb_8_gazebo/src/: gazebo_bb_8_controller.cpp
bb8/bb_8_teleop/: CMakeLists.txt  package.xml
